--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,10 @@
 PORT=3000
+
+
+PRODUCTS_MS_PORT=3001
+PRODUCTS_MS_HOST=localhost
+
+ORDERS_MS_PORT=3002
+ORDERS_MS_HOST=localhost
+
+NATS_SERVERS=nats://localhost:4222
